--- a/package.json
+++ b/package.json
@@ -15,15 +15,15 @@
     "express": "^4.17.1",
     "express-fileupload": "^1.4.0",
     "rimraf": "^3.0.2",
-    "node-sass": "^7.0.1",
     "pug": "^3.0.1",
-    "jest": "^27.3.0",
-    "supertest": "^6.1.3",
     "@axe-core/cli": "4.4.3",
     "axe-core": "4.4.3",
     "vnu-jar": "21.10.12"
   },
   "devDependencies": {
-    "better-npm-audit": "^3.7.3"
+    "better-npm-audit": "^3.7.3",
+    "node-sass": "^7.0.1",
+    "jest": "^27.3.0",
+    "supertest": "^6.1.3"
   }
 }
