--- a/.nsprc
+++ b/.nsprc
@@ -1,3 +1,3 @@
 {
-  "https://github.com/advisories/GHSA-7mwh-4pqv-wmr8": "scss-tokenizer: devDependency, no risk given our usage"
+  "https://github.com/advisories/GHSA-hrpp-h998-j3pp": "qs: devDependency, no risk given our usage"
 }
