--- a/.nsprc
+++ b/.nsprc
@@ -1,4 +1,6 @@
 {
   "GHSA-hrpp-h998-j3pp": "qs: devDependency, no risk given our usage",
-  "GHSA-9c47-m6qq-7p4h": "json5: devDependency, no risk given our usage"
+  "GHSA-9c47-m6qq-7p4h": "json5: devDependency, no risk given our usage",
+  "GHSA-h452-7996-h45h": "cookiejar: devDependency, no risk given our usage",
+  "GHSA-rc47-6667-2j5j": "http-cache-semantics: devDependency, no risk given our usage"
 }
