PLATUI-2313 PLATUI-2316 add known issues around accordion component

--- a/page-accessibility-check/src/main/resources/application.conf
+++ b/page-accessibility-check/src/main/resources/application.conf
@@ -246,5 +246,23 @@ a11y-assessment-config: {
         furtherInformation = """This is a known govuk-frontend issue. Teams cannot fix this. Please check this issue for any updates https://github.com/alphagov/govuk-frontend/issues/2472"""
       }
     }
+    {
+      tool = "axe"
+      descriptionRegex = """Fix all of the following:[\n\r\s]+aria-labelledby attribute cannot be used on a div with no valid role attribute."""
+      snippetRegex = """<div .*class="govuk-accordion__section-content".*aria-labelledby=".*".*>"""
+      action {
+        knownIssue = true
+        furtherInformation = """This is a known govuk-frontend issue. Teams cannot fix this. Please check this issue for any updates https://github.com/alphagov/govuk-frontend/issues/2472"""
+      }
+    }
+    {
+      tool = "vnu"
+      descriptionRegex = """Bad value “until-found” for attribute “hidden” on element “div”"""
+      snippetRegex = """<div .*class="govuk-accordion__section-content".*hidden="until-found".*>"""
+      action {
+        knownIssue = true
+        furtherInformation = """This is a known govuk-frontend issue. Teams cannot fix this. Please check this issue for any updates https://github.com/alphagov/govuk-frontend/issues/2472"""
+      }
+    }
   ]
 }
