--- a/page-accessibility-check/src/main/resources/application.conf
+++ b/page-accessibility-check/src/main/resources/application.conf
@@ -264,5 +264,14 @@ a11y-assessment-config: {
         furtherInformation = """This is a known govuk-frontend issue. Teams cannot fix this. Please check this issue for any updates https://github.com/alphagov/govuk-frontend/issues/2472"""
       }
     }
+    {
+      tool = "vnu"
+      descriptionRegex = """The “inputmode” attribute is not supported in all browsers."""
+      snippetRegex = """<input class="govuk-input govuk-date-input.* inputmode="numeric""""
+      action {
+        knownIssue = true
+        furtherInformation = """The use of `inputmode=numeric` for dates is a conscious GDS design choice - see this blog post for details: https://technology.blog.gov.uk/2020/02/24/why-the-gov-uk-design-system-team-changed-the-input-type-for-numbers/"""
+      }
+    }
   ]
 }
