--- a/page-accessibility-check/src/main/resources/application.conf
+++ b/page-accessibility-check/src/main/resources/application.conf
@@ -273,5 +273,14 @@ a11y-assessment-config: {
         furtherInformation = """The use of `inputmode=numeric` for dates is a conscious GDS design choice - see this blog post for details: https://technology.blog.gov.uk/2020/02/24/why-the-gov-uk-design-system-team-changed-the-input-type-for-numbers/"""
       }
     }
+    {
+      tool = "vnu"
+      descriptionRegex = """Bad value “true” for attribute “async” on element “script”."""
+      snippetRegex = """<script .*src="[^"]*google[^"]*""""
+      action {
+        knownIssue = true
+        furtherInformation = """These are third-party scripts injected by Google Analytics."""
+      }
+    }
   ]
 }
