--- a/.nsprc
+++ b/.nsprc
@@ -6,5 +6,6 @@
   "GHSA-h452-7996-h45h": "cookiejar: devDependency, no risk given our usage",
   "GHSA-72xf-g2v4-qvf3": "tough-cookie: devDependency, no risk given our usage",
   "GHSA-rc47-6667-2j5j": "http-cache-semantics: devDependency, no risk given our usage",
-  "GHSA-p8p7-x288-28g6": "request: devDependency, no risk given our usage"
+  "GHSA-p8p7-x288-28g6": "request: devDependency, no risk given our usage",
+  "GHSA-72xf-g2v4-qvf3": "tough-cookie : devDependency, no risk given our usage"
 }
