PLATUI-2574: Added new known issue relating to Google Analytics

--- a/page-accessibility-check/src/main/resources/application.conf
+++ b/page-accessibility-check/src/main/resources/application.conf
@@ -282,5 +282,14 @@ a11y-assessment-config: {
         furtherInformation = """These are third-party scripts injected by Google Analytics."""
       }
     }
+    {
+      tool = "vnu"
+      descriptionRegex = """Bad value “origin-trial“ for attribute “http-equiv“ on element “meta“"""
+      snippetRegex = """<meta .*http-equiv="origin-trial".*>"""
+      action {
+        knownIssue = true
+        furtherInformation = """These are third-party scripts injected by Google Analytics."""
+      }
+    }
   ]
 }
