--- a/page-accessibility-check/src/main/resources/application.conf
+++ b/page-accessibility-check/src/main/resources/application.conf
@@ -284,7 +284,7 @@ a11y-assessment-config: {
     }
     {
       tool = "vnu"
-      descriptionRegex = """Bad value “origin-trial“ for attribute “http-equiv“ on element “meta“"""
+      descriptionRegex = """Bad value “origin-trial” for attribute “http-equiv” on element “meta”."""
       snippetRegex = """<meta .*http-equiv="origin-trial".*>"""
       action {
         knownIssue = true
