--- a/.nsprc
+++ b/.nsprc
@@ -2,6 +2,7 @@
   "GHSA-j8xg-fqg3-53r7": "word-wrap: dependency, no risk given how accessibility-assessment is used",
   "GHSA-c2qf-rxjj-qqgw": "semver: dependency, no risk given how accessibility-assessment is used",
   "GHSA-hrpp-h998-j3pp": "qs: devDependency, no risk given our usage",
+  "GHSA-67hx-6x53-jw92": "@babel/traverse: devDependency, no risk given our usage",
   "GHSA-9c47-m6qq-7p4h": "json5: devDependency, no risk given our usage",
   "GHSA-h452-7996-h45h": "cookiejar: devDependency, no risk given our usage",
   "GHSA-72xf-g2v4-qvf3": "tough-cookie: devDependency, no risk given our usage",
