--- a/.nsprc
+++ b/.nsprc
@@ -1,4 +1,5 @@
 {
+  "GHSA-jchw-25xp-jwwc": "follow-redirects: devDependency, no risk given our usage",
   "GHSA-wf5p-g6vw-rhxx": "axios: devDependency, no risk given our usage",
   "GHSA-hm92-vgmw-qfmx": "chromedriver: devDependency, no risk given our usage",
   "GHSA-j8xg-fqg3-53r7": "word-wrap: dependency, no risk given how accessibility-assessment is used",
